--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
 .App {
-  text-align: center;
+  width: 96%;
+  max-width: 64rem;
+  margin: 3rem auto;
+  font-size: 1.35em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+label,
+input,
+textarea,
+button {
+  display: block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input,
+textarea {
+  margin-bottom: 2rem;
+  padding: 1rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 100%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  background-color: rgb(100, 149, 237);
+  padding: 0.5rem 2rem;
+  font-size: 1.35em;
+  color: #fff;
+  border: 2px solid rgb(0, 49, 137);
+  border-radius: 4px;
 }
